--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,13 @@
 			<version>${org.springframework.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.10</version>
+		</dependency>
+
 	</dependencies>
 </project>
