--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>liyubin</name>
 	<properties>
-		<org.springframework.version>4.0.0.M3</org.springframework.version>
-		<!-- <org.springframework.version>4.0.2.RELEASE</org.springframework.version> -->
+		<!-- <org.springframework.version>4.0.0.M3</org.springframework.version> -->
+		<org.springframework.version>4.0.2.RELEASE</org.springframework.version>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -67,6 +67,12 @@
 			<version>${org.springframework.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
 
 		<!-- aspectj -->
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
@@ -81,5 +87,26 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.10</version>
 		</dependency>
+		<!-- DAO事务支持 -->
+		<!-- 导入Mysql数据库链接jar包 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
+		<!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<!-- C3P0数据库连接池 -->
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
+		</dependency>
 	</dependencies>
+
+
 </project>
