--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
+		<!-- Jedis框架，用来操作Redis键值对非关系型内存数据库 -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
